cypress tests - UV_USE_IO_URING

--- a/test/cypress/executor-tests/crd/crd.yaml
+++ b/test/cypress/executor-tests/crd/crd.yaml
@@ -122,6 +122,10 @@ spec:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
         type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
     args:
       - --env
       - NON_CYPRESS_ENV=NON_CYPRESS_ENV_value
@@ -150,6 +154,10 @@ spec:
       CYPRESS_CUSTOM_ENV:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
+        type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
         type: basic
     args:
       - --browser
@@ -182,6 +190,10 @@ spec:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
         type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
     args:
       - --browser
       - chrome
@@ -213,6 +225,10 @@ spec:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
         type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
     args:
       - --env
       - NON_CYPRESS_ENV=NON_CYPRESS_ENV_value
@@ -241,6 +257,10 @@ spec:
       CYPRESS_CUSTOM_ENV:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
+        type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
         type: basic
     args:
       - --browser
@@ -273,6 +293,10 @@ spec:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
         type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
     args:
       - --browser
       - chrome
@@ -304,6 +328,10 @@ spec:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
         type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
     args:
       - --env
       - NON_CYPRESS_ENV=NON_CYPRESS_ENV_value
@@ -332,6 +360,10 @@ spec:
       CYPRESS_CUSTOM_ENV:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
+        type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
         type: basic
     args:
       - --env
@@ -366,6 +398,10 @@ spec:
         name: DEPENDENCY_MANAGER
         value: yarn
         type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
     args:
       - --env
       - NON_CYPRESS_ENV=NON_CYPRESS_ENV_value
@@ -394,6 +430,10 @@ spec:
       CYPRESS_CUSTOM_ENV:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
+        type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
         type: basic
     args:
       - --env
@@ -433,6 +473,10 @@ spec:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
         type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
     args:
       - --env
       - NON_CYPRESS_ENV=NON_CYPRESS_ENV_value
@@ -471,6 +515,10 @@ spec:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
         type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
     args:
       - --env
       - NON_CYPRESS_ENV=NON_CYPRESS_ENV_value
@@ -500,6 +548,10 @@ spec:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
         type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
     args:
       - --env
       - NON_CYPRESS_ENV=NON_CYPRESS_ENV_value
@@ -528,6 +580,10 @@ spec:
       CYPRESS_CUSTOM_ENV:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
+        type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
         type: basic
     args:
       - --browser
@@ -560,6 +616,10 @@ spec:
         name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
         type: basic
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
     args:
       - --browser
       - firefox
@@ -588,6 +648,11 @@ spec:
   executionRequest:
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 2Gi\n              cpu: 2\n"
     activeDeadlineSeconds: 180
+    variables:
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
 ---
 apiVersion: tests.testkube.io/v3
 kind: Test
@@ -612,6 +677,11 @@ spec:
       - video=false
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 2Gi\n              cpu: 2\n"
     activeDeadlineSeconds: 180
+    variables:
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
 ---
 apiVersion: tests.testkube.io/v3
 kind: Test
@@ -636,6 +706,11 @@ spec:
       - video=false
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 2Gi\n              cpu: 2\n"
     activeDeadlineSeconds: 180
+    variables:
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
 ---
 apiVersion: tests.testkube.io/v3
 kind: Test
@@ -658,6 +733,11 @@ spec:
       - video=false
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 2Gi\n              cpu: 2\n"
     activeDeadlineSeconds: 180
+    variables:
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
 ---
 apiVersion: tests.testkube.io/v3
 kind: Test
@@ -682,6 +762,11 @@ spec:
       - video=false
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 2Gi\n              cpu: 2\n"
     activeDeadlineSeconds: 180
+    variables:
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
 ---
 apiVersion: tests.testkube.io/v3
 kind: Test
@@ -706,6 +791,11 @@ spec:
       - video=false
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 2Gi\n              cpu: 2\n"
     activeDeadlineSeconds: 180
+    variables:
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
 ---
 apiVersion: tests.testkube.io/v3
 kind: Test
@@ -728,3 +818,8 @@ spec:
     negativeTest: true
     jobTemplate: "apiVersion: batch/v1\nkind: Job\nspec:\n  template:\n    spec:\n      containers:\n        - name: \"{{ .Name }}\"\n          image: {{ .Image }}\n          resources:\n            requests:\n              memory: 1Gi\n              cpu: 1\n"
     activeDeadlineSeconds: 180
+    variables:
+      UV_USE_IO_URING:
+        name: UV_USE_IO_URING
+        value: "0"
+        type: basic
