cypress 14 workflow and workflow with template

--- a/test/cypress/executor-tests/crd-workflow/smoke.yaml
+++ b/test/cypress/executor-tests/crd-workflow/smoke.yaml
@@ -1,6 +1,71 @@
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
+  name: cypress-workflow-smoke-14
+  labels:
+    core-tests: workflows
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: cypress-14-project-and-cleanup # TODO: update before merge
+      paths:
+      - test/cypress/executor-tests/cypress-14
+  container:
+    resources:
+      requests:
+        cpu: 2
+        memory: 2Gi
+    workingDir: /data/repo/test/cypress/executor-tests/cypress-14
+  steps:
+  - name: Run tests
+    run:
+      image: cypress/included:14.0.3
+      args:
+      - --env
+      - NON_CYPRESS_ENV=NON_CYPRESS_ENV_value
+      - --config
+      - '{"screenshotsFolder":"/data/artifacts/screenshots","videosFolder":"/data/artifacts/videos"}'
+      env:
+      - name: CYPRESS_CUSTOM_ENV
+        value: CYPRESS_CUSTOM_ENV_value
+    steps:
+    - name: Saving artifacts
+      workingDir: /data/artifacts
+      artifacts:
+        paths:
+        - '**/*'
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: cypress-workflow-smoke-14
+  labels:
+    core-tests: workflows
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: cypress-14-project-and-cleanup # TODO: update before merge
+      paths:
+      - test/cypress/executor-tests/cypress-14
+  container:
+    resources:
+      requests:
+        cpu: 2
+        memory: 2Gi
+    workingDir: /data/repo/test/cypress/executor-tests/cypress-14
+  steps:
+  - name: Run from template
+    template:
+      name: official/cypress/v1
+      config:
+        version: 14.0.3
+        run: "npx cypress run --env NON_CYPRESS_ENV=NON_CYPRESS_ENV_value --config '{\"screenshotsFolder\":\"/data/artifacts/screenshots\",\"videosFolder\":\"/data/artifacts/videos\"}'"
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
   name: cypress-workflow-smoke-13
   labels:
     core-tests: workflows
