--- a/test/suites/test-workflows/cypress-workflow.yaml
+++ b/test/suites/test-workflows/cypress-workflow.yaml
@@ -9,6 +9,8 @@ spec:
   - execute:
       parallelism: 2
       workflows:
+      - name: cypress-workflow-smoke-14
+      - name: cypress-workflow-smoke-14-template
       - name: cypress-workflow-smoke-13
       - name: cypress-workflow-smoke-13-video-recording-enabled
       - name: cypress-workflow-smoke-13-negative
@@ -19,4 +21,3 @@ spec:
       - name: cypress-workflow-smoke-13-junit-report
       - name: distributed-cypress-workflow-smoke-13
       - name: cypress-workflow-smoke-matrix-junit
-      
