--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -7594,6 +7594,9 @@ components:
         executionPath:
           type: string
           description: all test workflow execution ids starting from the root
+        executionReference:
+          type: string
+          description: reference test workflow execution id         
         type:
           $ref: "#/components/schemas/TestWorkflowRunningContextActorType"
 
