--- a/.github/workflows/docker-build-develop.yaml
+++ b/.github/workflows/docker-build-develop.yaml
@@ -11,63 +11,63 @@ env:
   BUSYBOX_IMAGE: busybox:1.36.1-musl
 
 jobs:
-  api:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Set-up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version:  stable
-          cache: false
-
-      - name: Go Cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-          key: testkube-api-go-${{ hashFiles('**/go.sum') }}
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - id: commit
-        uses: prompt/actions-commit-hash@v3
-
-      - name: Release
-        uses: goreleaser/goreleaser-action@v6
-        with:
-          distribution: goreleaser
-          version: latest
-          args: release -f goreleaser_files/.goreleaser-docker-build-api.yml --snapshot
-        env:
-          GITHUB_TOKEN: ${{ secrets.CI_BOT_TOKEN }}
-          ANALYTICS_TRACKING_ID: ${{secrets.TESTKUBE_API_GA_MEASUREMENT_ID}}
-          ANALYTICS_API_KEY: ${{secrets.TESTKUBE_API_GA_MEASUREMENT_SECRET}}
-          SLACK_BOT_CLIENT_ID: ${{secrets.TESTKUBE_SLACK_BOT_CLIENT_ID}}
-          SLACK_BOT_CLIENT_SECRET: ${{secrets.TESTKUBE_SLACK_BOT_CLIENT_SECRET}}
-          SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_SEGMENTIO_KEY}}
-          CLOUD_SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_CLOUD_SEGMENTIO_KEY}}
-          DOCKER_BUILDX_BUILDER: "${{ steps.buildx.outputs.name }}"
-          DOCKER_BUILDX_CACHE_FROM: "type=gha"
-          DOCKER_BUILDX_CACHE_TO: "type=gha,mode=max"
-          ALPINE_IMAGE: ${{ env.ALPINE_IMAGE }}
-          BUSYBOX_IMAGE: ${{ env.BUSYBOX_IMAGE }}
-          IMAGE_TAG_SHA: true
-
-      - name: Push Docker images
-        run: |
-          docker push kubeshop/testkube-api-server:${{ steps.commit.outputs.short }}
+#  api:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#
+#      - name: Set up Docker Buildx
+#        id: buildx
+#        uses: docker/setup-buildx-action@v3
+#
+#      - name: Set-up Go
+#        uses: actions/setup-go@v5
+#        with:
+#          go-version:  stable
+#          cache: false
+#
+#      - name: Go Cache
+#        uses: actions/cache@v4
+#        with:
+#          path: |
+#            ~/go/pkg/mod
+#            ~/.cache/go-build
+#          key: testkube-api-go-${{ hashFiles('**/go.sum') }}
+#
+#      - name: Login to DockerHub
+#        uses: docker/login-action@v3
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#
+#      - id: commit
+#        uses: prompt/actions-commit-hash@v3
+#
+#      - name: Release
+#        uses: goreleaser/goreleaser-action@v6
+#        with:
+#          distribution: goreleaser
+#          version: latest
+#          args: release -f goreleaser_files/.goreleaser-docker-build-api.yml --snapshot
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.CI_BOT_TOKEN }}
+#          ANALYTICS_TRACKING_ID: ${{secrets.TESTKUBE_API_GA_MEASUREMENT_ID}}
+#          ANALYTICS_API_KEY: ${{secrets.TESTKUBE_API_GA_MEASUREMENT_SECRET}}
+#          SLACK_BOT_CLIENT_ID: ${{secrets.TESTKUBE_SLACK_BOT_CLIENT_ID}}
+#          SLACK_BOT_CLIENT_SECRET: ${{secrets.TESTKUBE_SLACK_BOT_CLIENT_SECRET}}
+#          SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_SEGMENTIO_KEY}}
+#          CLOUD_SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_CLOUD_SEGMENTIO_KEY}}
+#          DOCKER_BUILDX_BUILDER: "${{ steps.buildx.outputs.name }}"
+#          DOCKER_BUILDX_CACHE_FROM: "type=gha"
+#          DOCKER_BUILDX_CACHE_TO: "type=gha,mode=max"
+#          ALPINE_IMAGE: ${{ env.ALPINE_IMAGE }}
+#          BUSYBOX_IMAGE: ${{ env.BUSYBOX_IMAGE }}
+#          IMAGE_TAG_SHA: true
+#
+#      - name: Push Docker images
+#        run: |
+#          docker push kubeshop/testkube-api-server:${{ steps.commit.outputs.short }}
 
 #  testworkflow:
 #    strategy:
@@ -492,12 +492,12 @@ jobs:
   executor_cypress:
     runs-on: ubuntu-latest
     steps:
-      - name: Free Disk Space (Ubuntu)
-        uses: jlumbroso/free-disk-space@main
-        with:
-          # this might remove tools that are actually needed,
-          # if set to "true" but frees about 6 GB
-          tool-cache: false
+#      - name: Free Disk Space (Ubuntu)
+#        uses: jlumbroso/free-disk-space@main
+#        with:
+#          # this might remove tools that are actually needed,
+#          # if set to "true" but frees about 6 GB
+#          tool-cache: false
 
       - name: Checkout
         uses: actions/checkout@v4
