--- a/.github/workflows/docker-build-api-executors-tag.yaml
+++ b/.github/workflows/docker-build-api-executors-tag.yaml
@@ -574,7 +574,7 @@ jobs:
 
           ]
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
 #      - name: Free Disk Space (Ubuntu)
 #        uses: jlumbroso/free-disk-space@main
