--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,22 +13,22 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'cmd/**'
-      - 'pkg/**'
-      - 'internal/**'
-      - 'contrib/**'
+      - "cmd/**"
+      - "pkg/**"
+      - "internal/**"
+      - "contrib/**"
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'cmd/**'
-      - 'pkg/**'
-      - 'internal/**'
-      - 'contrib/**'
+      - "cmd/**"
+      - "pkg/**"
+      - "internal/**"
+      - "contrib/**"
   schedule:
-    - cron: '00 12 * * 1-5'
+    - cron: "00 12 * * 1-5"
 
 jobs:
   analyze:
@@ -42,44 +42,44 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'go' ]
+        language: ["go"]
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
         # Learn more about CodeQL language support at https://git.io/codeql-language-support
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3.27.5
-      with:
-        languages: ${{ matrix.language }}
-        # If you wish to specify custom queries, you can do so here or in a config file.
-        # By default, queries listed here will override any specified in a config file.
-        # Prefix the list here with "+" to use these queries and those in the config file.
-        # queries: ./path/to/local/query, your-org/your-repo/queries@main
+      # Initializes the CodeQL tools for scanning.
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3.28.9
+        with:
+          languages: ${{ matrix.language }}
+          # If you wish to specify custom queries, you can do so here or in a config file.
+          # By default, queries listed here will override any specified in a config file.
+          # Prefix the list here with "+" to use these queries and those in the config file.
+          # queries: ./path/to/local/query, your-org/your-repo/queries@main
 
-    - name: Install Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: stable
+      - name: Install Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: stable
 
-    - name: Get Go environment
-      id: go-env
-      run: |
-        echo "::set-output name=cache::$(go env GOCACHE)"
-        echo "::set-output name=modcache::$(go env GOMODCACHE)"
+      - name: Get Go environment
+        id: go-env
+        run: |
+          echo "::set-output name=cache::$(go env GOCACHE)"
+          echo "::set-output name=modcache::$(go env GOMODCACHE)"
 
-    - name: Set up cache
-      uses: actions/cache@v4
-      with:
-        path: |
-          ${{ steps.go-env.outputs.cache }}
-          ${{ steps.go-env.outputs.modcache }}
-        key: test-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          test-${{ runner.os }}-go-
+      - name: Set up cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ${{ steps.go-env.outputs.cache }}
+            ${{ steps.go-env.outputs.modcache }}
+          key: test-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            test-${{ runner.os }}-go-
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3.27.5
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3.28.9
