--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -7923,6 +7923,8 @@ components:
           $ref: "#/components/schemas/TestTriggerProbeSpec"
         action:
           $ref: "#/components/schemas/TestTriggerActions"
+        actionParameters:
+          $ref: "#/components/schemas/TestTriggerActionParameters"        
         execution:
           $ref: "#/components/schemas/TestTriggerExecutions"
         testSelector:
@@ -7979,6 +7981,10 @@ components:
           type: string
           description: resource namespace
           example: testkube
+        namespaceRegex:
+          type: string
+          description: kubernetes resource namespace regex
+          example: test*
         labelSelector:
           $ref: "https://raw.githubusercontent.com/garethr/kubernetes-json-schema/master/v1.7.8/_definitions.json#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.LabelSelector"
           description: label selector for Kubernetes resources
@@ -8009,6 +8015,15 @@ components:
       type: string
       enum:
         - run
+
+    TestTriggerActionParameters:
+      description: supported action parameters for test triggers
+      type: object
+      properties:
+        config:
+          $ref: "#/components/schemas/TestWorkflowConfigValue"
+        tags:
+          $ref: "#/components/schemas/TestWorkflowTagValue"        
 
     TestTriggerConditionSpec:
       type: object
