fix: storing execution parameters for re-run (#6164)
* fix: storing execution parameters

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: don't store sensitive values

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: unit test

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: unit test

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: add flags

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* feat: rerun test workflows

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: check for nil config

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: outdated check

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: pass running context

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: rename var

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: check config hashes

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: get config hassh method

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: add route

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* feat: rerun api spec

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* feat: rerun client method

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* feat: rerun cli command

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: change codeql version

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: change log

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: error message

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: remove unused param

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: check for required parameters

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: golint

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* feat: execution reference

Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

* fix: dep update

Signed-off-by: Vladi

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -4303,6 +4303,47 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Problem"
+  /test-workflows/{id}/executions/{executionID}/rerun:
+    post:
+      tags:
+        - test-workflows
+        - api
+      parameters:
+        - $ref: "#/components/parameters/ID"
+        - $ref: "#/components/parameters/executionID"
+      summary: Rerun test workflow execution
+      description: Rerun test workflow execution
+      operationId: rerunTestWorkflowExecutionByTestWorkflow
+      requestBody:
+        description: test workflow running context
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/TestWorkflowRunningContext"
+      responses:
+        200:
+          description: successful execution
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TestWorkflowExecution"
+        400:
+          description: "problem with body parsing - probably some bad input occurs"
+          content:
+            application/problem+json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Problem"
+        502:
+          description: problem communicating with kubernetes cluster
+          content:
+            application/problem+json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Problem"
   /test-workflow-executions:
     post:
       parameters:
@@ -4631,6 +4672,47 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Problem"
+  /test-workflow-executions/{executionID}/rerun:
+    post:
+      tags:
+        - test-workflows
+        - api
+      parameters:
+        - $ref: "#/components/parameters/executionID"
+      summary: Rerun test workflow execution
+      description: Rerun test workflow execution
+      operationId: rerunTestWorkflowExecution
+      requestBody:
+        description: test workflow running context
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/TestWorkflowRunningContext"
+      responses:
+        200:
+          description: successful execution
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TestWorkflowExecution"
+        400:
+          description: "problem with body parsing - probably some bad input occurs"
+          content:
+            application/problem+json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Problem"
+        502:
+          description: problem communicating with kubernetes cluster
+          content:
+            application/problem+json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Problem"
+
   /test-workflows/{id}/abort:
     post:
       tags:
@@ -7512,6 +7594,9 @@ components:
         executionPath:
           type: string
           description: all test workflow execution ids starting from the root
+        executionReference:
+          type: string
+          description: reference test workflow execution id         
         type:
           $ref: "#/components/schemas/TestWorkflowRunningContextActorType"
 
@@ -9936,13 +10021,21 @@ components:
         value:
           type: string
           description: configuration value
+        emptyValue:
+          type: boolean
+          description: configuration value is empty
         defaultValue:
           type: string
           description: configuration value default
+        emptyDefaultValue:
+          type: boolean
+          description: configuration value default is empty
         truncated:
           type: boolean
           description: indicates if the value is truncated
-
+        sensitive:
+          type: boolean
+          description: marks value as sensitive
 
     TestWorkflowConfigValue:
       type: object
